--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
             height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f0f2f5;
+            background-color: gold; /* Changed background color to gold */
         }
         .login-container {
             background-color: #fff;
